--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -47,7 +47,7 @@ jobs:
           chmod u+x ./kustomize
       - name: Deploy
         run: |-
-          ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE_DBT:TAG=$IMAGE_NAME:$GITHUB_SHA
+          ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE_API:TAG=$IMAGE_NAME:$GITHUB_SHA
           ./kustomize build . | kubectl apply -f -
       - name: Wait for deployment
         run: |-
