--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -42,6 +42,13 @@ spec:
       securityContext:
         runAsUser: 0
         fsGroup: 0
+      initContainers:
+        - name: set-pvc-permissions
+          image: busybox
+          command: ["/bin/sh", "-c", "chmod -R 777 /data"]
+          volumeMounts:
+            - mountPath: /data
+              name: jupyterlab-data
       containers:
         - name: jupyterlab
           image: gcr.io/PROJECT_ID/IMAGE_API:TAG
