--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -31,6 +31,8 @@ metadata:
     name: jupyterlab
 spec:
   replicas: 1
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       name: jupyterlab
