feat: new kernels and apt packages

--- a/kernels/sandbox.yaml
+++ b/kernels/sandbox.yaml
@@ -1,5 +1,5 @@
 metadata:
-  display_name: "Escritorio de Dados - Default"
+  display_name: "Escritorio de Dados - Sandbox"
   python_version: "3.9"
   use_poetry: false
 
