--- a/kernels/default.yaml
+++ b/kernels/default.yaml
@@ -31,6 +31,8 @@ dependencies:
   - opencv-python
   - openai
   - langchain
-  - langchain-google-
+  - langchain-google-genai
   - tabulate
   - google-cloud-aiplatform
+  - google-cloud-storage
+  - google-cloud-bigquery
